--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib",
     "lint": "standard src/** test/**",
-    "test": "NODE_ENV=test mocha --compilers js:babel/register --recursive",
-    "test:cov": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- --recursive",
+    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
+    "test:cov": "babel-node ./node_modules/.bin/isparta cover _mocha -- --recursive",
     "prepublish": "npm run lint && npm test && npm run clean && npm run build"
   },
   "dependencies": {
@@ -13,13 +13,16 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
-    "babel": "^5.8.29",
-    "babel-eslint": "^4.1.3",
-    "isparta": "^3.1.0",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.9.0",
+    "isparta": "^4.0.0",
+    "lodash.isplainobject": "^4.0.4",
     "mocha": "^2.3.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.2",
-    "standard": "^5.3.1"
+    "standard": "^7.1.2"
   },
   "standard": {
     "parser": "babel-eslint"
